# Cut-Off-Plugin

./: CMakeLists.txt  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/UI/: CutoffLookAndFeel.h  SpectralDisplay.cpp  SpectralDisplay.h
